--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="475.0" prefWidth="706.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.bsuir.ptoop.gui.MainController">
+<AnchorPane prefHeight="475.0" prefWidth="706.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.bsuir.oop.gui.MainController">
    <children>
       <Canvas fx:id="canvas" height="475.0" width="706.0" />
    </children>
