--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="475.0" prefWidth="706.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.bsuir.oop.gui.MainController">
    <children>
       <VBox>
          <children>
-            <FlowPane prefHeight="4.0" prefWidth="706.0">
-               <children>
-                  <Button mnemonicParsing="false" text="Button" />
-                  <Button mnemonicParsing="false" text="Button" />
-               </children>
-            </FlowPane>
+            <MenuBar>
+              <menus>
+                <Menu fx:id="menu" mnemonicParsing="false" text="Draw" />
+              </menus>
+            </MenuBar>
             <Canvas fx:id="canvas" height="475.0" width="706.0" />
          </children>
       </VBox>
