Add oop-round-rectangle module

--- a/oop-main/src/main/resources/fxml/main-table.fxml
+++ b/oop-main/src/main/resources/fxml/main-table.fxml
@@ -16,6 +16,7 @@
                         <Menu fx:id="addMenu" mnemonicParsing="false" text="Add" />
                         <Menu fx:id="editMenu" mnemonicParsing="false" text="Edit" />
                         <Menu fx:id="serializeMenu" mnemonicParsing="false" text="Serialize" />
+                        <Menu fx:id="optionsMenu" mnemonicParsing="false" text="Options" />
                     </menus>
                 </MenuBar>
             </children>
